--- a/haskid.cabal
+++ b/haskid.cabal
@@ -11,7 +11,7 @@ build-type: Simple
 cabal-version: >=1.10
 
 library
-    build-depends:       base >=4.7 && <4.8
+    build-depends:       base >=4.7 && <4.8, vector
     default-language:    Haskell2010
     hs-source-dirs: src
     exposed-modules: Data.HaskID
